--- a/style.css
+++ b/style.css
@@ -1,4 +1,35 @@
-body {background-color:tan;}
-h1{color:green;}
+body {
+	background-color:black;
+	font-family:arial;
+	color:white;
+	display:flex;
+	justify-content: center;
+}
 
+h1{
+	color:grey;
+	font-family:verdana;
+	text-align:center;
+}
 
+table{
+	text-align:center;
+}
+
+.maindiv {
+	background-color:white;
+	color:black;
+	width: 300px;
+	padding: 20px;
+	border-radius: 25px;	
+	display: inline-block;
+}
+
+.output{
+	 display: block;
+	 text-align:left;
+}
+
+footer{
+	text-align:left;
+}
